# elinOS

./: .gitignore  AI.md  CONTRIBUTING.md  Cargo.toml  GEMENI.md  GEMINI.md  LICENSE  Makefile  README.md  README_zh.md  boot_log.txt  build.sh  requirements.txt  run.sh  test_runner.py
.cargo/: config.toml
.github/workflows/: badge.yml  ci.yml
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: lib.rs  linker.ld  linker.ld.bak  main.rs  trap.rs
bootloader/src/elf/: constants.rs  error.rs  loader.rs  mod.rs  parser.rs
bootloader/src/filesystem/ext2/: block.rs  inode.rs  structures.rs
bootloader/src/graphics/: mod.rs
bootloader/src/syscall/: device.rs  elinos.rs  file.rs  mod.rs  sysinfo.rs
bootloader/src/virtio/: gpu.rs
bootloader/src/virtio/block/: mod.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: commands.rs  console.rs  elf.rs  linker.ld  main.rs  shell_interface.rs  trap.rs  virtio_blk.rs
crates/kernel/src/filesystem/: fat32.rs  mod.rs
crates/kernel/src/filesystem/ext2/: block.rs  directory.rs  inode.rs  mod.rs  superblock.rs
crates/kernel/src/memory/: mmu.rs  vmm.rs
crates/kernel/src/syscall/: memory.rs  mod.rs  network.rs  process.rs
crates/shell/: Cargo.toml
crates/shell/src/: commands.rs  lib.rs  parser.rs
docs/: README.md  architecture.md  filesystem.md  memory_improvements.md  syscalls.md
docs/en/: architecture.md  commands.md  debugging.md  development.md  filesystem.md  getting-started.md  memory.md  roadmap.md  syscalls.md  translation.md
docs/zh/: CHANGELOG.md  architecture.md  commands.md  debugging.md  development.md  filesystem.md  getting-started.md  memory.md  roadmap.md  syscalls.md  translation.md
examples/c_programs/: BUILD.md  README.md  file_test.c  fork_test.c  hello_simple.c  hello_world.c  program.ld  simple_test.c  test_program.c
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: commands.rs  console.rs  linker.ld  main.rs  trap.rs  virtio_blk.rs
kernel/src/drivers/: gpio.rs  mod.rs
kernel/src/drivers/sdcard/: commands.rs  device.rs  error.rs  mod.rs  protocol.rs
kernel/src/drivers/spi/: controller.rs  error.rs  gpio_spi.rs  mod.rs
kernel/src/elf/: constants.rs  error.rs  loader.rs  mod.rs  parser.rs  structures.rs
kernel/src/filesystem/: mod.rs  traits.rs
kernel/src/filesystem/ext2/: bitmap.rs  block.rs  directory.rs  inode.rs  mod.rs  superblock.rs
kernel/src/graphics/: mod.rs
kernel/src/memory/: layout.rs  mapping.rs  mmu.rs  mod.rs  slab.rs  small_alloc.rs
kernel/src/syscall/: device.rs  directory.rs  elinos.rs  file.rs  memory.rs  mod.rs  process.rs  time.rs
kernel/src/virtio/: error.rs  gpu.rs  mmio.rs  mod.rs  queue.rs  storage.rs
kernel/src/virtio/block/: device.rs
src/: commands.rs  elf.rs  filesystem.rs  linker.ld  main.rs  memory.rs  sbi.rs  simple_disk.rs  trap.rs  uart.rs  virtio_blk.rs  virtio_block.rs
src/filesystem/: ext2_old.rs  ext4.rs  fat32.rs  mod.rs  traits.rs
src/filesystem/ext2/: bitmap.rs  block.rs  directory.rs  inode.rs  mod.rs  superblock.rs
src/memory/: buddy.rs  fallible.rs  layout.rs  mmu.rs  mod.rs  small_alloc.rs  vmm.rs
src/syscall/: device.rs  directory.rs  elinos.rs  file.rs  memory.rs  mod.rs  network.rs  process.rs  sysinfo.rs  time.rs
