[package]
name = "elinos"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = "0.10.1"
spin = "0.9"
embedded-hal = "0.2.7"
# For better error handling and collections
heapless = "0.8"
# For static initialization
lazy_static = { version = "1.4", features = ["spin_no_std"] }
# Memory allocator
linked_list_allocator = "0.10"
# C runtime functions
rlibc = "1.0"

[features]
default = ["development"]
development = []
production = []
headless = []
legacy = []

[profile.dev]
panic = "abort"
opt-level = 3  # Enable optimizations even in debug builds
lto = true     # Enable link-time optimization

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1

[target.riscv64gc-unknown-none-elf]
rustflags = [
    "-C", "link-arg=-Tsrc/linker.ld",
]

[[bin]]
name = "kernel"
path = "src/main.rs"
