[workspace]
members = [
    "crates/kernel",
    "crates/shell",
]
resolver = "2"

[workspace.dependencies]
riscv = "0.10.1"
spin = "0.9"
embedded-hal = "0.2.7"
# For better error handling and collections
heapless = "0.8"
# For static initialization
lazy_static = { version = "1.4", features = ["spin_no_std"] }
# Memory allocator
linked_list_allocator = "0.10"

[profile.dev]
panic = "abort"
opt-level = 3  # Enable optimizations even in debug builds
lto = true     # Enable link-time optimization

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
