[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = "0.10.1"
spin = "0.9"
embedded-hal = "0.2.7"
heapless = "0.8"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
linked_list_allocator = "0.10"

[features]
default = ["development"]
development = []
production = []
headless = []
legacy = []



[[bin]]
name = "kernel"
path = "src/main.rs" 